[package]
name = "channel-test"
version = "0.1.0"
authors = ["袁殷 <2212079150@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10.5"

tokio = { version = "1", features = ["full"] }
tokio-util = "0.6.0"
